# icon

./: Cargo.toml  README.md
resources/: example.index.theme
src/: icon.rs  lib.rs  search.rs  search_dir.rs  theme.rs
