[package]
name = "icon"
description = "Reality-compliant library to find icons on linux with ease"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
    "/src/**"
]
repository = "https://github.com/zeroeightysix/icon"
readme = "README.md"
keywords = ["icon", "loader", "theme", "xdg"]
categories = ["multimedia::images", "data-structures"]

[dependencies]
freedesktop_entry_parser = "1.3.0"
thiserror = "2.0.12"
xdg = "3.0.0"
log = { version = "0.4.27", optional = true }

[features]
"log" = ["dep:log"]

[dev-dependencies]
freedesktop-desktop-entry = "0.7.13"
